# python-calculator

./: pyproject.toml  test_calculator.py
.github/workflows/: test.yml
